package ua.khpi.oop.malokhvii07.navigation.map;

public class ConfigurableNavigationMap extends AbstractNavigationMap {

    ConfigurableNavigationMap(final NavigationMapBuilder builder) {
        super(builder);
    }
}
